--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body style="text-align: center; font-family: sans-serif; padding: 2rem;">
   <h1>Room AR 보기</h1>
-  <p>아래 버튼을 누르면 AR로 공간을 확인할 수 있어요 (iPhone Safari에서만 지원됩니다)</p>
+  <p>아래 버튼을 누르면 AR로 공간을 확인할 수 있어요</p>
 
   <a rel="ar" href="room001.usdz">
-    <img src="https://developer.apple.com/arkit/images/usdz/usdz_badge_inline.svg" alt="View in AR" width="180" />
+    <img src="https://developer.apple.com/arkit/images/usdz/usdz_badge_inline.svg" alt="View in AR" width="180">
   </a>
 </body>
 </html>
