--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Room AR Viewer</title>
+  <title>AR Ring Viewer</title>
 </head>
 <body style="text-align: center; font-family: sans-serif; padding: 2rem;">
-  <h1>Room AR 보기</h1>
-  <p>아래 버튼을 누르면 AR로 공간을 확인할 수 있어요</p>
+  <h1>📱  AR 보기</h1>
+  <p>아래 버튼을 누르면 AR로  확인할 수 있어요 (iPhone Safari에서만 동작)</p>
 
-  <a rel="ar" href="room001.usdz">
-    <img src="https://developer.apple.com/arkit/images/usdz/usdz_badge_inline.svg" alt="View in AR" width="180">
+  <a rel="ar" href="ring.usdz">
+    <img src="https://developer.apple.com/arkit/images/usdz/usdz_badge_inline.svg" alt="View in AR" width="200" />
   </a>
 </body>
 </html>
